src/x86_64_gen/snapshots/dinky_c__x86_64_gen__x86_64_gen__tests__x86_64_main_logical_and.snap
---
source: src/x86_64_gen/x86_64_gen.rs
expression: x86_64_asm
---
	.globl _main
_main:
	mov	rax, 2
	cmp	rax, 0
	jne	_clause2_1
	mov	rax, 0
	jmp	_end_2
_clause2_1:
	mov	rax, 4
	cmp	rax, 0
	mov	rax, 0
	setne	al
_end_2:
	ret

