src/x86_64_gen/snapshots/dinky_c__x86_64_gen__x86_64_gen__tests__x86_64_main_subtraction.snap
---
source: src/x86_64_gen/x86_64_gen.rs
expression: x86_64_asm
---
	.globl _main
_main:
	mov	rax, 1
	push	rax
	mov	rax, 2
	pop	rcx
	sub	rcx, rax
	mov	rax, rcx
	ret

